fixed issue where elements within a pane could expand the entire TabSwitcher when they grew too large

--- a/pages.css
+++ b/pages.css
@@ -73,7 +73,7 @@ body {
   border: none;
   outline: none;
 
-  resize: none;
+  /* resize: none; */
 
 }
 
