--- a/tab-switcher.css
+++ b/tab-switcher.css
@@ -46,6 +46,8 @@
   justify-content: center;
   align-items: center;
 
+  flex-grow: 0 !important;
+
 }
 
 .tab-switcher .ribbon {
@@ -99,12 +101,17 @@
   justify-content: center;
   align-items: center;
 
+  overflow: hidden;
+
+  flex-grow: 0 !important;
+
 }
 
 .tab-switcher .display {
 
   width: 100%;
   height: 100%;
+  max-height: 100%;
   box-sizing: border-box;
   border-radius: var(--curviness);
 
@@ -127,6 +134,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
+  overflow: hidden;
 
 }
 
@@ -140,6 +149,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
+  overflow: auto;
 
 }
 
@@ -154,6 +165,8 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+
+  flex-shrink: 0;
 
   background-color: var(--alternate-color);
 
@@ -170,6 +183,8 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+
+  flex-shrink: 0;
 
   background-color: var(--alternate-color);
 
